--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          persist-credentials: true  # これで後で git push ができる
+          persist-credentials: true
 
       - name: Setup Python
         uses: actions/setup-python@v4
