--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,11 @@
         "limits": "cpp",
         "valarray": "cpp",
         "iostream": "cpp",
-        "array": "cpp"
+        "array": "cpp",
+        "deque": "cpp",
+        "list": "cpp",
+        "vector": "cpp",
+        "string_view": "cpp",
+        "span": "cpp"
     }
 }
