--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "list": "cpp",
         "vector": "cpp",
         "string_view": "cpp",
-        "span": "cpp"
+        "span": "cpp",
+        "ostream": "cpp"
     }
 }
