--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,29 +1,54 @@
 {
-  "version": "2.0.0",
-  "tasks": [
-    {
-      "label": "C/C++: g++ アクティブなファイルのビルド",
-      "type": "shell",
-      "command": "/usr/bin/g++",
-      "args": [
-        "-fdiagnostics-color=always",
-        "-g",
-        "-std=c++23",
-        "-O2",
-        "-I${workspaceFolder}/library",
-        "-I/home/leal/lib/ac-library/ac-library-master",
-        "${file}",
-        "-o",
-        "${fileDirname}/${fileBasenameNoExtension}"
-      ],
-      "options": {
-        "cwd": "${workspaceFolder}"
-      },
-      "group": {
-        "kind": "build",
-        "isDefault": true
-      },
-      "problemMatcher": ["$gcc"],
-    }
-  ]
+    "version": "2.0.0",
+    "tasks": [
+        {
+            "label": "C/C++: g++ アクティブなファイルのビルド",
+            "type": "shell",
+            "command": "/usr/bin/g++",
+            "args": [
+                "-fdiagnostics-color=always",
+                "-g",
+                "-std=c++23",
+                "-O2",
+                "-I${workspaceFolder}/library",
+                "-I/home/leal/lib/ac-library/ac-library-master",
+                "${file}",
+                "-o",
+                "${fileDirname}/${fileBasenameNoExtension}"
+            ],
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "group": {
+                "kind": "build",
+                "isDefault": false
+            },
+            "problemMatcher": [
+                "$gcc"
+            ]
+        },
+        {
+            "type": "cppbuild",
+            "label": "C/C++: g++-13 アクティブなファイルのビルド",
+            "command": "/usr/bin/g++-13",
+            "args": [
+                "-fdiagnostics-color=always",
+                "-g",
+                "${file}",
+                "-o",
+                "${fileDirname}/${fileBasenameNoExtension}"
+            ],
+            "options": {
+                "cwd": "${fileDirname}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "detail": "デバッガーによって生成されたタスク。"
+        }
+    ]
 }
